# synapse

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.uv  README.md  cerebras_client.py  database.py  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  docker.sh  langchain_cerebras.py  main.py  mcp_config.json  mcp_config_loader.py  mcp_manager.py  mcp_models.py  pyproject.toml  quick_test.py  requirements.txt  searxng_client.py  test_mcp_manager.py
.cursor/rules/: ai-prompting-best-practices.mdc  code-quality-standards.mdc  database-management.mdc  project-overview.mdc  telegram-bot-patterns.mdc
