[project]
name = "synapse"
version = "0.1.0"
description = "A sophisticated Telegram bot powered by Cerebras AI with intelligent conversations and persistent memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[all]>=21.0",
    "langchain>=0.1.0",
    "cerebras_cloud_sdk>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "structlog>=23.0.0",
    "bs4>=0.0.2",
    "langchain-core>=0.3.75",
    "langchain-community>=0.3.29",
]
